--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datepicker": "^3.3.0",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
